--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,8 @@
-ktorVersion=2.1.3
-kotlinVersion=1.7.20
-logbackVersion=1.4.4
+ktor_version=2.1.3
+kotlin_version=1.7.20
+logback_version=1.4.4
 kotlin.code.style=official
-spaceSdkVersion=139318-beta
+space_sdk_version=139318-beta
+exposed_version=0.36.2
+h2_version=1.4.200
+postgresql_version=42.5.0
