--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -7,8 +7,8 @@ ktor {
         modules = [ ru.ordertime.small_talks.ApplicationKt.module ]
     }
     datasource {
-        url = "jdbc:postgresql://localhost:5432/small-talks-db"
-        user = root
-        password = root
+        url = "jdbc:postgresql://pg13_1/small-talks-db"
+        user = postgres
+        password = postgres
     }
 }
